--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "framer-motion": "^12.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.56.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^7.5.1",
     "recoil": "^0.7.7",
     "styled-components": "^6.1.17"
